--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "devDependencies": {
-    "cordova-android": "^10.1.2"
+    "cordova-android": "^10.1.2",
+    "Html5Video": "file:Html5Video-master"
   }
 }
